[package]
name = "aether-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
scraper = "0.19"
uuid = { version = "1.7", features = ["v4"] }
fastembed = "4.0.0"
pdf-extract = "0.7"